--- a/subtitle-collapsingtoolbarlayout/src/main/res/values/styles.xml
+++ b/subtitle-collapsingtoolbarlayout/src/main/res/values/styles.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="SubtitleCollapsingToolbarLayout"
-           parent="@style/Widget.Design.CollapsingToolbar">
-    </style>
 
-    <style name="CollapsedSubtitleAppearance" parent="TextAppearance.AppCompat">
-        <item name="android:textSize">13sp</item>
-    </style>
+    <style name="SubtitleCollapsingToolbarLayout" parent="@style/Widget.Design.CollapsingToolbar"/>
 
-    <style name="ExpandedSubtitleAppearance" parent="TextAppearance.AppCompat">
-        <item name="android:textSize">20sp</item>
-    </style>
+    <style name="CollapsedSubtitleAppearance" parent="TextAppearance.AppCompat.Widget.ActionBar.Subtitle"/>
+
+    <style name="ExpandedSubtitleAppearance" parent="TextAppearance.AppCompat.Headline"/>
 </resources>
