--- a/example/src/main/res/layout/activity_article_default.xml
+++ b/example/src/main/res/layout/activity_article_default.xml
@@ -22,7 +22,7 @@
             android:fitsSystemWindows="true"
             app:contentScrim="?colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:title="Raja Ampat">
+            app:title="Raja Ampat aaaaaaaaaaaaaaaaaaaaa">
 
             <ImageView
                 android:layout_width="match_parent"
