--- a/example/src/main/res/layout/activity_article_subtitle.xml
+++ b/example/src/main/res/layout/activity_article_subtitle.xml
@@ -23,7 +23,8 @@
             app:contentScrim="?colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:subtitle="Papua, Indonesia"
-            app:title="Raja Ampat">
+            app:title="Raja Ampat"
+            app:useCorrectPadding="true">
 
             <ImageView
                 android:layout_width="match_parent"
