--- a/example/src/main/res/values/styles.xml
+++ b/example/src/main/res/values/styles.xml
@@ -10,4 +10,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">@android:color/transparent</item>
         <item name="android:windowDrawsSystemBarBackgrounds" tools:targetApi="l">true</item>
     </style>
+
+    <style name="CustomTheme" parent="Widget.Design.SubtitleCollapsingToolbar">
+        <item name="expandedSubtitleTextAppearance">@style/TextAppearance.AppCompat.Caption</item>
+    </style>
 </resources>
