--- a/example/res/layout/activity_main.xml
+++ b/example/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="256dp"
             android:fitsSystemWindows="true"
-            app:contentScrim2="?colorPrimary"
+            app:contentScrim="?colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:subtitle="Papua, Indonesia"
             app:title="Raja Ampat"
