--- a/collapsingtoolbarlayout-subtitle/tests/res/layout/activity_instrumented.xml
+++ b/collapsingtoolbarlayout-subtitle/tests/res/layout/activity_instrumented.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="256dp"
             android:fitsSystemWindows="true"
-            app:contentScrim2="?colorPrimary"
+            app:contentScrim="?colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:subtitle="CollapsingToolbarLayout"
             app:title="Subtitle"
