rewritten codebase to Kotlin
preparing for support version 26.0.0

--- a/collapsingtoolbarlayout-subtitle/tests/res/layout/activity_instrumented.xml
+++ b/collapsingtoolbarlayout-subtitle/tests/res/layout/activity_instrumented.xml
@@ -32,8 +32,8 @@
         </android.support.design.widget.SubtitleCollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <com.hendraanggrian.widget.ErrorView
-        android:id="@+id/errorView"
+    <FrameLayout
+        android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
