--- a/example/res/layout/activity_main.xml
+++ b/example/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:subtitle="Papua, Indonesia"
             app:title="Raja Ampat"
-            app:useCorrectPadding="true">
+            app:fixPadding="true">
 
             <ImageView
                 android:layout_width="match_parent"
