--- a/collapsingtoolbarlayout-subtitle/res/values/styles.xml
+++ b/collapsingtoolbarlayout-subtitle/res/values/styles.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="Widget.Design.CollapsingToolbar.Subtitle" parent="Widget.Design.CollapsingToolbar">
         <item name="expandedSubtitleTextAppearance">@style/TextAppearance.AppCompat.Headline</item>
-        <item name="collapsedSubtitleTextAppearance">@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle</item>
+        <item name="collapsedSubtitleTextAppearance">
+            @style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle
+        </item>
     </style>
 </resources>
