--- a/demo/res/menu/article.xml
+++ b/demo/res/menu/article.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <item
         android:id="@+id/item_article_bookmark"
-        android:icon="@drawable/ic_bookmark_white_24dp"
+        android:icon="@drawable/ic_action_tune"
         android:title="Bookmark"
         android:visible="false"
         app:showAsAction="ifRoom"
-        tools:ignore="HardcodedText"/>
+        tools:ignore="HardcodedText" />
 </menu>
